--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="main" id="main">
+      <%= render "layouts/header" %>
+        <div class="container">
+          <%= yield %>
+        </div>
+      <%= render "layouts/footer" %>
+    </div>
   </body>
 </html>
