--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -110,6 +110,37 @@ footer{
   }
 }
 
+.dic_head {
+  margin-top: 50px;
+  .dic_head_text {
+    font-weight: bold;
+  }
+}
+
+.form_header {
+  margin-top: 50px;
+}
+
+.form_body {
+  margin-top: 30px;
+}
+
+.dic_row {
+  margin-top: 20px;
+}
+
+.dic_edit_form_row {
+  margin-top: 20px;
+  form {
+    margin-top: 30px;
+    button {
+      margin-left: 10px;
+    }
+  }
+}
+
+
+
 .header-main {
   .search-container {
     margin-top: -100px;
