--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -20,7 +20,7 @@
 
 <%- if devise_mapping.omniauthable? %>
   <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to t(".sign")"#{OmniAuth::Utils.camelize(provider)}",
+    <%= link_to "avc #{OmniAuth::Utils.camelize(provider)}",
       omniauth_authorize_path(resource_name, provider) %><br />
   <% end -%>
 <% end -%>
