--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,16 +4,18 @@
     <title><%= Rails.application.class.parent_name %></title>
     <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
+    <%= stylesheet_link_tag    "application", media: "all" %>
+    <%= javascript_include_tag "application" %>
   </head>
 
   <body>
     <div class="main" id="main">
       <%= render "layouts/header" %>
-        <div class="container">
-          <%= yield %>
-        </div>
+
+      <div class="container">
+        <%= yield %>
+      </div>
+
       <%= render "layouts/footer" %>
     </div>
   </body>
