--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,87 +1,110 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+@import 'config/color_var';
+
+html {
+  position: relative;
+  min-height: 100%;
+}
 
 body {
-  background-color: #f7f7f7;
-  color: #666;
+  background-color: $wild-sand-color;
+  color: $dove-gray-color;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   line-height: 20px;
+  margin-bottom: 100px;
 }
 
 header {
-  background-color: #292929;
-  color: #fff;
+  background-color: $mine-shaft-color;
+  color: $white-color;
+
   .navbar {
+    border: inherit;
     border-radius: 0;
     margin-bottom: 0;
-    border: inherit;
   }
+
   #logo {
     padding-top: 5px;
   }
+
   .navbar-default {
-    background-color: #292929;
-    color: #fff;
+    background-color: $mine-shaft-color;
+    color: $white-color;
+
     .navbar-nav {
+
       li {
+
         a {
-          color: #fff;
-          font-weight: bold;
+          color: $white-color;
           font-size: 16px;
-          &:hover{
-            color: #fff;
-            background-color: transparent;
-            border-top: 3px solid #ce4933;
+          font-weight: bold;
+
+          &:hover {
+            color: $white-color;
           }
         }
+
         .social {
           list-style-type: none;
           margin: 0;
-          padding: 0;
           overflow: hidden;
-          padding-top: 10px;
+          padding: 0;
           padding-bottom: 15px;
+          padding-top: 10px;
+
           li {
             float: left;
             margin-right: 10px;
+
             a {
-              color: #fff;
+              border-radius: 50%;
+              color: $white-color;
               display: inline-block;
               height: 26px;
               line-height: 22px;
-              width: 26px;
-              vertical-align: 2px;
               text-align: center;
-              border-radius: 50%;
+              vertical-align: 2px;
+              width: 26px;
+
               i {
                 padding-top: 5px;
               }
             }
+
             .icon-facebook {
-              background: #3b5998;
+              background: $chambray-color;
             }
+
             .icon-google {
-              background-color: #dc4e41;
+              background-color: $valencia-color;
             }
+
             .icon-twitter {
-              background-color: #6faedc;
+              background-color: $viking-color;
             }
+
             .icon-instagram {
-              background-color: #9643b5;
+              background-color: $studio-color;
             }
+
             .icon-youtube {
-              background-color: #ee1c1b;
+              background-color: $crimson-color;
             }
           }
         }
+
         .btn-login {
-          background: #ce4e33;
-          padding: 10px;
-          margin-top: 5px;
-          margin-right: 15px;
+          background: $mojo-color;
           border-radius: 4px;
+          margin-right: 15px;
+          margin-top: 5px;
+          padding: 10px;
+
           i {
             margin-right: 6px;
           }
@@ -91,27 +114,123 @@ header {
   }
 }
 
-footer{
-  background-color: #292929;
-  padding-top: 50px;
+footer {
+  background-color: $mine-shaft-color;
+  bottom: 0;
   padding-bottom: 50px;
+  padding-top: 50px;
+  position: absolute;
+  height: 60px;
+  width: 100%;
+
   .copyright {
     text-align: center;
+
     p {
-      color: #fff;
+      color: $white-color;
     }
   }
 }
 
-.slider {
-  position: relative;
-  img {
-    width: 100%;
+.header-main {
+
+  .search-container {
+    margin-top: 100px;
+
+    .box-search {
+      background-color: $deep-koamaru-color;
+      border-radius: 4px;
+      min-height: 200px;
+      padding-top: 34px;
+
+      .category-list {
+        margin-top: 30px;
+
+        ul {
+          list-style-type: none;
+          margin: 0;
+          padding-left: 0;
+
+          li {
+            display: inline-block;
+            margin-right: 10px;
+
+            a {
+              background-color: $kashmir-blue-color;
+              color: $white-color;
+            }
+          }
+        }
+      }
+    }
+
+    .search-btn {
+      min-height: 60px;
+    }
+
+    .box-register {
+      background-color: $tuscany-color;
+      border-radius: 4px;
+      color: $white-color;
+      min-height: 200px;
+      padding: 10px;
+
+      .box-btn-register {
+        background-color: $white-color;
+        color: $cod-gray-color;
+      }
+
+      .box-btn-login {
+        background-color: $cumin-color;
+        color: $white-color;
+        margin-left: 10px;
+      }
+    }
+  }
+}
+
+.words-list {
+  background-color: $gallery-color;
+  border-radius: 4px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding-left: 0;
+
+    li {
+      padding-bottom: 10px;
+      padding-top: 10px;
+      font-size: 20px;
+    }
+  }
+
+  .words-list-content {
+
+    h3 {
+      font-weight: bold;
+      text-align: center;
+    }
+  }
+}
+
+.word-details-type {
+
+  hr {
+    border-top: 1px solid $cod-gray-color;
+    margin-top: 5px;
+  }
+
+  span {
+   font-weight: bold;
   }
 }
 
 .dic_head {
   margin-top: 50px;
+
   .dic_head_text {
     font-weight: bold;
   }
@@ -131,406 +250,12 @@ footer{
 
 .dic_edit_form_row {
   margin-top: 20px;
+
   form {
     margin-top: 30px;
+
     button {
       margin-left: 10px;
-    }
-  }
-}
-
-
-
-.header-main {
-  .search-container {
-    margin-top: -100px;
-    .box-search {
-      min-height: 200px;
-      background-color: #11326f;
-      padding-top: 34px;
-      border-radius: 4px;
-      .category-list {
-        margin-top: 30px;
-        ul {
-          list-style-type: none;
-          margin: 0px;
-          padding-left: 0px;
-          li {
-            display: inline-block;
-            margin-right: 10px;
-            a {
-              background-color: #4f6794;
-              color: #fff;
-            }
-          }
-        }
-      }
-    }
-    .search-btn {
-      min-height: 60px;
-    }
-    .box-register {
-      min-height: 200px;
-      background-color: #d06433;
-      padding: 10px;
-      color: #fff;
-      border-radius: 4px;
-      .box-btn-register {
-        background-color: #fff;
-        color: #141414;
-      }
-      .box-btn-login {
-        margin-left: 10px;
-        background-color: #9e4923;
-        color: #fff;
-      }
-    }
-  }
-}
-
-#modal{
-  #qid {
-    padding: 10px 15px;
-    -moz-border-radius: 50px;
-    -webkit-border-radius: 50px;
-    border-radius: 20px;
-  }
-  label.btn {
-    padding: 18px 60px;
-    white-space: normal;
-    -webkit-transform: scale(1.0);
-    -moz-transform: scale(1.0);
-    -o-transform: scale(1.0);
-    -webkit-transition-duration: .3s;
-    -moz-transition-duration: .3s;
-    -o-transition-duration: .3s
-  }
-
-  label.btn:hover {
-    text-shadow: 0 3px 2px rgba(0,0,0,0.4);
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -o-transform: scale(1.1)
-  }
-  label.btn-block {
-    text-align: left;
-    position: relative
-  }
-
-  label .btn-label {
-    position: absolute;
-    left: 0;
-    top: 0;
-    display: inline-block;
-    padding: 0 10px;
-    background: rgba(0,0,0,.15);
-    height: 100%
-  }
-
-  label .glyphicon {
-    top: 34%
-  }
-  .element-animation1 {
-    animation: animationFrames ease .8s;
-    animation-iteration-count: 1;
-    transform-origin: 50% 50%;
-    -webkit-animation: animationFrames ease .8s;
-    -webkit-animation-iteration-count: 1;
-    -webkit-transform-origin: 50% 50%;
-    -ms-animation: animationFrames ease .8s;
-    -ms-animation-iteration-count: 1;
-    -ms-transform-origin: 50% 50%
-  }
-  .element-animation2 {
-    animation: animationFrames ease 1s;
-    animation-iteration-count: 1;
-    transform-origin: 50% 50%;
-    -webkit-animation: animationFrames ease 1s;
-    -webkit-animation-iteration-count: 1;
-    -webkit-transform-origin: 50% 50%;
-    -ms-animation: animationFrames ease 1s;
-    -ms-animation-iteration-count: 1;
-    -ms-transform-origin: 50% 50%
-  }
-  .element-animation3 {
-    animation: animationFrames ease 1.2s;
-    animation-iteration-count: 1;
-    transform-origin: 50% 50%;
-    -webkit-animation: animationFrames ease 1.2s;
-    -webkit-animation-iteration-count: 1;
-    -webkit-transform-origin: 50% 50%;
-    -ms-animation: animationFrames ease 1.2s;
-    -ms-animation-iteration-count: 1;
-    -ms-transform-origin: 50% 50%
-  }
-  .element-animation4 {
-    animation: animationFrames ease 1.4s;
-    animation-iteration-count: 1;
-    transform-origin: 50% 50%;
-    -webkit-animation: animationFrames ease 1.4s;
-    -webkit-animation-iteration-count: 1;
-    -webkit-transform-origin: 50% 50%;
-    -ms-animation: animationFrames ease 1.4s;
-    -ms-animation-iteration-count: 1;
-    -ms-transform-origin: 50% 50%
-  }
-  @keyframes animationFrames {
-    0% {
-      opacity: 0;
-      transform: translate(-1500px,0px)
-    }
-    60% {
-      opacity: 1;
-      transform: translate(30px,0px)
-    }
-    80% {
-      transform: translate(-10px,0px)
-    }
-    100% {
-      opacity: 1;
-      transform: translate(0px,0px)
-    }
-  }
-
-  @-webkit-keyframes animationFrames {
-    0% {
-      opacity: 0;
-      -webkit-transform: translate(-1500px,0px)
-    }
-    60% {
-      opacity: 1;
-      -webkit-transform: translate(30px,0px)
-    }
-
-    80% {
-      -webkit-transform: translate(-10px,0px)
-    }
-
-    100% {
-      opacity: 1;
-      -webkit-transform: translate(0px,0px)
-    }
-  }
-
-  @-ms-keyframes animationFrames {
-    0% {
-      opacity: 0;
-      -ms-transform: translate(-1500px,0px)
-    }
-    60% {
-      opacity: 1;
-      -ms-transform: translate(30px,0px)
-    }
-    80% {
-      -ms-transform: translate(-10px,0px)
-    }
-    100% {
-      opacity: 1;
-      -ms-transform: translate(0px,0px)
-    }
-  }
-  .modal-header {
-    background-color: transparent;
-    color: inherit
-  }
-  .modal-body {
-    min-height: 205px
-  }
-  #loadbar {
-    position: absolute;
-    width: 62px;
-    height: 77px;
-    top: 2em;
-    display: none;
-  }
-  .blockG {
-    position: absolute;
-    background-color: #FFF;
-    width: 10px;
-    height: 24px;
-    -moz-border-radius: 8px 8px 0 0;
-    -moz-transform: scale(0.4);
-    -moz-animation-name: fadeG;
-    -moz-animation-duration: .8800000000000001s;
-    -moz-animation-iteration-count: infinite;
-    -moz-animation-direction: linear;
-    -webkit-border-radius: 8px 8px 0 0;
-    -webkit-transform: scale(0.4);
-    -webkit-animation-name: fadeG;
-    -webkit-animation-duration: .8800000000000001s;
-    -webkit-animation-iteration-count: infinite;
-    -webkit-animation-direction: linear;
-    -ms-border-radius: 8px 8px 0 0;
-    -ms-transform: scale(0.4);
-    -ms-animation-name: fadeG;
-    -ms-animation-duration: .8800000000000001s;
-    -ms-animation-iteration-count: infinite;
-    -ms-animation-direction: linear;
-    -o-border-radius: 8px 8px 0 0;
-    -o-transform: scale(0.4);
-    -o-animation-name: fadeG;
-    -o-animation-duration: .8800000000000001s;
-    -o-animation-iteration-count: infinite;
-    -o-animation-direction: linear;
-    border-radius: 8px 8px 0 0;
-    transform: scale(0.4);
-    animation-name: fadeG;
-    animation-duration: .8800000000000001s;
-    animation-iteration-count: infinite;
-    animation-direction: linear
-  }
-  #rotateG_01 {
-    left: 0;
-    top: 28px;
-    -moz-animation-delay: .33s;
-    -moz-transform: rotate(-90deg);
-    -webkit-animation-delay: .33s;
-    -webkit-transform: rotate(-90deg);
-    -ms-animation-delay: .33s;
-    -ms-transform: rotate(-90deg);
-    -o-animation-delay: .33s;
-    -o-transform: rotate(-90deg);
-    animation-delay: .33s;
-    transform: rotate(-90deg)
-  }
-  #rotateG_02 {
-    left: 8px;
-    top: 10px;
-    -moz-animation-delay: .44000000000000006s;
-    -moz-transform: rotate(-45deg);
-    -webkit-animation-delay: .44000000000000006s;
-    -webkit-transform: rotate(-45deg);
-    -ms-animation-delay: .44000000000000006s;
-    -ms-transform: rotate(-45deg);
-    -o-animation-delay: .44000000000000006s;
-    -o-transform: rotate(-45deg);
-    animation-delay: .44000000000000006s;
-    transform: rotate(-45deg)
-  }
-  #rotateG_03 {
-    left: 26px;
-    top: 3px;
-    -moz-animation-delay: .55s;
-    -moz-transform: rotate(0deg);
-    -webkit-animation-delay: .55s;
-    -webkit-transform: rotate(0deg);
-    -ms-animation-delay: .55s;
-    -ms-transform: rotate(0deg);
-    -o-animation-delay: .55s;
-    -o-transform: rotate(0deg);
-    animation-delay: .55s;
-    transform: rotate(0deg)
-  }
-  #rotateG_04 {
-    right: 8px;
-    top: 10px;
-    -moz-animation-delay: .66s;
-    -moz-transform: rotate(45deg);
-    -webkit-animation-delay: .66s;
-    -webkit-transform: rotate(45deg);
-    -ms-animation-delay: .66s;
-    -ms-transform: rotate(45deg);
-    -o-animation-delay: .66s;
-    -o-transform: rotate(45deg);
-    animation-delay: .66s;
-    transform: rotate(45deg)
-  }
-  #rotateG_05 {
-    right: 0;
-    top: 28px;
-    -moz-animation-delay: .7700000000000001s;
-    -moz-transform: rotate(90deg);
-    -webkit-animation-delay: .7700000000000001s;
-    -webkit-transform: rotate(90deg);
-    -ms-animation-delay: .7700000000000001s;
-    -ms-transform: rotate(90deg);
-    -o-animation-delay: .7700000000000001s;
-    -o-transform: rotate(90deg);
-    animation-delay: .7700000000000001s;
-    transform: rotate(90deg)
-  }
-  #rotateG_06 {
-    right: 8px;
-    bottom: 7px;
-    -moz-animation-delay: .8800000000000001s;
-    -moz-transform: rotate(135deg);
-    -webkit-animation-delay: .8800000000000001s;
-    -webkit-transform: rotate(135deg);
-    -ms-animation-delay: .8800000000000001s;
-    -ms-transform: rotate(135deg);
-    -o-animation-delay: .8800000000000001s;
-    -o-transform: rotate(135deg);
-    animation-delay: .8800000000000001s;
-    transform: rotate(135deg)
-  }
-  #rotateG_07 {
-    bottom: 0;
-    left: 26px;
-    -moz-animation-delay: .99s;
-    -moz-transform: rotate(180deg);
-    -webkit-animation-delay: .99s;
-    -webkit-transform: rotate(180deg);
-    -ms-animation-delay: .99s;
-    -ms-transform: rotate(180deg);
-    -o-animation-delay: .99s;
-    -o-transform: rotate(180deg);
-    animation-delay: .99s;
-    transform: rotate(180deg)
-  }
-  #rotateG_08 {
-    left: 8px;
-    bottom: 7px;
-    -moz-animation-delay: 1.1s;
-    -moz-transform: rotate(-135deg);
-    -webkit-animation-delay: 1.1s;
-    -webkit-transform: rotate(-135deg);
-    -ms-animation-delay: 1.1s;
-    -ms-transform: rotate(-135deg);
-    -o-animation-delay: 1.1s;
-    -o-transform: rotate(-135deg);
-    animation-delay: 1.1s;
-    transform: rotate(-135deg)
-  }
-  @-moz-keyframes fadeG {
-    0% {
-      background-color: #000
-    }
-    100% {
-      background-color: #FFF
-    }
-  }
-  @-webkit-keyframes fadeG {
-    0% {
-      background-color: #000
-    }
-
-    100% {
-      background-color: #FFF
-    }
-  }
-  @-ms-keyframes fadeG {
-    0% {
-      background-color: #000
-    }
-    100% {
-      background-color: #FFF
-    }
-  }
-
-  @-o-keyframes fadeG {
-    0% {
-      background-color: #000
-    }
-    100% {
-      background-color: #FFF
-    }
-  }
-  @keyframes fadeG {
-    0% {
-      background-color: #000
-    }
-    100% {
-     background-color: #FFF
     }
   }
 }
