--- a/app/views/dictionaries/index.html.erb
+++ b/app/views/dictionaries/index.html.erb
@@ -1,1 +1,3 @@
-<%= react_component "DictionariesContainer", {dictionaries: @dictionaries, categories: @categories} %>
+<%= react_component "DictionariesContainer", {dictionaries: @dictionaries,
+  categories: @categories, user_id: @user_id} %>
+
