--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
-  *= require font-awesome
+ *= require font-awesome
+ *= require sweetalert/dist/sweetalert.css
  *= require_self
  */
