--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -165,7 +165,7 @@ footer {
     }
 
     .search-btn {
-      min-height: 60px;
+      min-height: 34px;
     }
 
     .box-register {
@@ -257,6 +257,27 @@ footer {
     button {
       margin-left: 10px;
     }
+  }
+}
+
+.organizations-container {
+
+  h3 {
+    text-align: center;
+    font-weight: bold;
+  }
+}
+
+.btn-round {
+  width: 20px;
+  height: 20px;
+  padding: 0px;
+}
+
+.action {
+
+  a {
+    margin-right: 5px;
   }
 }
 
