Add new organization

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -281,3 +281,13 @@ footer {
   }
 }
 
+.organizations-action {
+  margin-bottom: 20px;
+}
+
+.error {
+  color: red;
+  font-size: 85%;
+  font-style: italic;
+  font-weight: normal;
+}
