Admin static pages

--- a/app/assets/stylesheets/config/color_var.scss
+++ b/app/assets/stylesheets/config/color_var.scss
@@ -16,3 +16,14 @@ $cod-gray-color: #141414;
 $black-color: #000;
 $dove-gray-color: #666;
 $gallery-color: #eee;
+$mine-shaft-color: #222;
+$dusty-gray-color: #999;
+$fern-color: #5cb85e;
+$goblin-color: #3d8b3d;
+$roman-color: #d9534f;
+$tall-poppy-color: #b52b27;
+$sandy-brown-color: #f0ad4e;
+$golden-bell-color: #df8a13;
+$black-one: rgba(0, 0, 0, .175);
+$black-two: rgba(0, 0, 0, .175);
+$black-three: rgba(0, 0, 0, .15);
