--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -311,6 +311,25 @@ footer {
   font-weight: normal;
 }
 
+
 .dictionaries-action {
   margin-bottom: 20px;
+}
+
+#error_explanation {
+
+  h2 {
+    display: none;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  ul {
+
+    li {
+      color: red;
+      font-style: italic;
+      font-weight: 300;
+    }
+  }
 }
