All users and Delete and Search users

--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -93,7 +93,7 @@
         </a>
         <ul id="users" class="collapse">
           <li>
-            <%= link_to t(".all_users"), "#" %>
+            <%= link_to t(".all_users"), admin_users_path %>
           </li>
           <li>
             <%= link_to t(".new_user"), "#" %>
