--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -333,3 +333,13 @@ footer {
     }
   }
 }
+
+.require {
+  color: red;
+  font-style: italic;
+  font-weight: 300;
+}
+
+.login-btn-register {
+  margin-left: 20px;
+}
