--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,1 +1,3 @@
-<%= react_component "Header", {categories: load_categories} %>
+<%= react_component "Header",
+  {categories: load_categories, current_page: is_root_page}
+%>
